# bid-compare

./: .dockerignore  .gitignore  docker-compose.yml  main.py  pyproject.toml
.claude/: launch.json
apps/api/: .env.example  Dockerfile  main.py  requirements.txt
apps/www/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
docs/: DEMO.html  DEMO.md  DEPLOY.md  MEMPAS_项目说明_V1.0.pptx  README.md  TESTING.md  TODO.md  USER_MANUAL.md  build-pptx.js  capture-matrix.js  capture-screenshots.js  demo-test-report.md  功能点.xlsx
docs/data/: README.md  manifest.json  不锈钢管清单_58-01.csv  不锈钢管清单_Sheet1.csv  不锈钢管清单_交子公园.csv  不锈钢管清单_宿迁恒力酒店.csv  不锈钢管清单_汇总.csv  不锈钢管清单_邬桥粮仓.csv  不锈钢管清单_鹿城广场四期.csv  桥架报价单格式模板_交子公园.csv  桥架报价单格式模板_人工智能岛二期.csv  桥架报价单格式模板_华泾镇D5B.csv  桥架报价单格式模板_华泾镇D5D-1.csv  桥架报价单格式模板_大理银桥.csv  桥架报价单格式模板_张江复旦国际创新中心生活组团.csv  桥架报价单格式模板_无锡104地块.csv  桥架报价单格式模板_汇总.csv  桥架报价单格式模板_淮海社区069-1、071-1街.csv  桥架报价单格式模板_温州市鹿城广场四期.csv  桥架报价单格式模板_港汇恒隆.csv  桥架报价单格式模板_简州新城.csv  桥架报价单格式模板_金鼎20-01.csv  桥架报价单格式模板_集电港3C-10.csv  母线报价单格式模板_494厂房.csv  母线报价单格式模板_Sheet1.csv  母线报价单格式模板_中科院.csv  母线报价单格式模板_交子公园.csv  母线报价单格式模板_无锡XDG-2021-104号地块.csv  母线报价单格式模板_汇总.csv  母线报价单格式模板_米哈游.csv  母线报价单格式模板_肿瘤医院.csv  水箱报价清单_不锈钢水箱投标清单.csv  水箱报价清单_不锈钢水箱投标清单技术明细.csv  水箱报价清单_交子公园.csv  水箱报价清单_无锡XDG-2021-104地块.csv  水箱报价清单_汇总.csv  水箱报价清单_港汇恒隆.csv  水箱报价清单_金桥17B-06.csv  (+61 more)
scripts/: analyze_data.py  convert_excel_to_csv.py  export_excel.py  import_data.py  migrate_v1_to_v2.py
tests/: conftest.py  test_analysis.py  test_api.py  test_import.py  test_models.py  test_new_api.py  test_standardize.py
(+181 files in other folders)
