[project]
name = "bid-compare"
version = "0.1.0"
description = "MEMPAS 机电材料查询比价分析系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "xlrd>=2.0.2",
    "numpy>=2.0.0",
    "python-multipart>=0.0.18",
    "openai>=1.30.0",
    "pypdfium2>=4.30.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[project.scripts]
mempas = "uvicorn:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
